# quad_rotor

./: .gitignore  74AVC4T774PWJ.dcm  74AVC4T774PWJ.lib  ATSAMS70N19A.lib  SAMD21EL.dcm  SAMD21EL.lib  ap65111a.dcm  ap65111a.lib  atsams70j19a.dcm  atsams70j19a.lib  bldc_unit.sch  icm-20948.dcm  icm-20948.lib  lps25hbtr.dcm  lps25hbtr.lib  mario_theme.mus  midi_convert.py  ncp5901.dcm  ncp5901.lib  plot.py  quad_rotor.kicad_pcb  quad_rotor.pro  quad_rotor.sch  sam-swd-10.dcm  sam-swd-10.lib  sym-lib-table
bldc_driver/rust_bldc_driver/: Cargo.toml  memory.x
bldc_driver/rust_bldc_driver/.cargo/: config
bldc_driver/rust_bldc_driver/atsamd21e16l/: Cargo.toml  device.x
bldc_driver/rust_bldc_driver/atsamd21e16l/src/: ac.rs  dac.rs  dsu.rs  lib.rs  port.rs  sercom0.rs  sysctrl.rs  tc3.rs  tcc0.rs  wdt.rs
bldc_driver/rust_bldc_driver/atsamd21e16l/src/ac/: compctrl.rs  ctrla.rs  evctrl.rs
bldc_driver/rust_bldc_driver/atsamd21e16l/src/adc/: inputctrl.rs
bldc_driver/rust_bldc_driver/atsamd21e16l/src/dac/: ctrlb.rs  data.rs  databuf.rs  evctrl.rs  intenclr.rs  intenset.rs  intflag.rs
bldc_driver/rust_bldc_driver/atsamd21e16l/src/dmac/: chctrlb.rs  chid.rs  chintenclr.rs  chintenset.rs  chintflag.rs  chstatus.rs  crcctrl.rs  intpend.rs  prictrl0.rs  swtrigctrl.rs
bldc_driver/rust_bldc_driver/atsamd21e16l/src/dsu/: addr.rs
bldc_driver/rust_bldc_driver/atsamd21e16l/src/eic/: evctrl.rs  intenclr.rs  intenset.rs  intflag.rs  wakeup.rs
bldc_driver/rust_bldc_driver/atsamd21e16l/src/evsys/: channel.rs  intenclr.rs  intenset.rs  (+2 more)
bldc_driver/rust_bldc_driver/src/: main.rs
(+81 files in other folders)
