[package]
authors = ["Acshi Haggenmiller <acshikh@gmail.com>"]
edition = "2018"
name = "rust_bldc_driver"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
cortex-m-semihosting = "0.3.2"
cortex-m-rtfm = "0.4.2"
panic-halt = "0.2.0"
atsamd21e16l = { path = "atsamd21e16l", features = ["rt"] }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
